# halcyon

./: .clang-format  .gitignore  CMakeLists.txt  README.md  debug.ps1  notes  relwithdebinfo.ps1
src/: discord.cpp  discord.h  globals.h  main.cpp  stream.cpp  stream.h  terminal.h
